# cpm

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_example.sh
cpm/: __init__.py  assign_chairs.py  assign_papers.py  assign_rooms.py  cli.py  config.py  data_prep.py  dummy_program.py  edit_program.py  models.py  output.py  output_latex.py  output_mobile.py  similarity.py
examples/base/config/: column_mapping.json  latex_config.json  schedule_config.json
examples/base/data/: example_papers.csv  example_topics.csv
